Fix for to-do https://basecamp.com/1759305/projects/824949-collectorsquest-com/todos/11749195-text-wrapping-issues

--- a/web/less/frontend/_collections.less
+++ b/web/less/frontend/_collections.less
@@ -73,6 +73,7 @@
 
 .item-description {
 	margin: 10px 0;
+	word-wrap: break-word;
 
 	h2 {
 		color: @red;
